Xay dung default cho server, cap nhat ServerController